// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Helpers/Padding All-Round Padding 1`] = `
<div
  dir="ltr"
>
  

  <style>
    
    div.demo {
        display: flex;
        height: 4rem;
        width: 8rem;
        background: #69ADF8;
    }
    .demo div {
        height: 100%;
        width: 100%;
        background: #E2EEFF;
    }

  </style>
  


  <div
    class="demo sap-padding"
  >
    
    
    <div />
    

  </div>
  

</div>
`;

exports[`Storyshots Helpers/Padding Double Sided Padding 1`] = `
<div
  dir="ltr"
>
  

  <style>
    
    div.demo {
        display: flex;
        height: 4rem;
        width: 8rem;
        background: #69ADF8;
    }
    .demo div {
        height: 100%;
        width: 100%;
        background: #E2EEFF;
    }

  </style>
  


  <h3>
    Tiny (0.5rem)
  </h3>
  

  <div
    class="demo sap-padding-x-tiny"
  >
    
    
    <div />
    

  </div>
  

  <br />
  

  <h3>
    Small (1rem)
  </h3>
  

  <div
    class="demo sap-padding-x-small"
  >
    
    
    <div />
    

  </div>
  

  <br />
  

  <h3>
    Medium (2rem)
  </h3>
  

  <div
    class="demo sap-padding-x-medium"
  >
    
    
    <div />
    

  </div>
  

  <br />
  

  <h3>
    Large (3rem)
  </h3>
  

  <div
    class="demo sap-padding-x-large"
  >
    
    
    <div />
    

  </div>
  

  <br />
  

</div>
`;

exports[`Storyshots Helpers/Padding No Padding 1`] = `
<div
  dir="ltr"
>
  

  <style>
    
    div.demo {
        display: flex;
        height: 4rem;
        width: 8rem;
        background: #69ADF8;
    }
    .demo div {
        height: 100%;
        width: 100%;
        background: #E2EEFF;
    }

  </style>
  


  <div
    class="demo sap-padding-none"
  >
    
    
    <div />
    

  </div>
  


</div>
`;

exports[`Storyshots Helpers/Padding Responsive Paddings 1`] = `
<div
  dir="ltr"
>
  

  <style>
    
    div.demo {
        display: flex;
        height: 4rem;
        width: 8rem;
        background: #69ADF8;
    }
    .demo div {
        height: 100%;
        width: 100%;
        background: #E2EEFF;
    }

  </style>
  


  <div
    class="demo sap-padding-responsive"
  >
    
    
    <div />
    

  </div>
  

</div>
`;
